<resources>
    <string name="previous">Предыдущий</string>
    <string name="next">Следующий</string>
    <string name="calendar">Календарь</string>
    <string name="username">логин</string>
    <string name="password">пароль</string>
    <string name="not_all_fields_filled">Заполнены не все поля</string>
    <string name="loading_please_wait">Загрузка, пожалуйста подождите…</string>
    <string name="network_error">Отсутствует интернет соединение, либо сервер недоступен</string>
    <string name="invalid_username_or_password">Неверное имя пользователя или пароль</string>
    <string name="task">Задача</string>
    <string name="tasks">Задачи</string>
    <string name="documents">Документы</string>
    <string name="exit">Выход</string>
    <string name="ended">Завершенные</string>
    <string name="busy">В работе</string>
    <string name="all">Все</string>
    <string name="folders">Папки</string>
    <string name="files">Файлы</string>
    <string name="empty_here">Тут пусто</string>
    <string name="move">Переместить</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="deselect">Отменить выделение</string>
    <string name="rename_folder">Переименовать Папку</string>
    <string name="cancel">Отмена</string>
    <string name="old_name">Старое название</string>
    <string name="new_folder">Новая папка</string>
    <string name="folder_name">Название папки</string>
    <string name="create">Создать</string>
    <string name="change_value">Изменить значение</string>
    <string name="hold_task">Отложить задачу</string>
    <string name="finish">Завершить</string>
    <string name="new_user">Новый пользователь</string>
    <string name="pass_is_empty">Пароль не введен</string>
    <string name="input_folder_name">Введите название папки</string>
    <string name="folder_successfully_created">Папка успешно создана</string>
    <string name="file_or_folder_already_exists">Файл или папка с таким именем уже сущесвует</string>
    <string name="pick_image">Выбрать изображение</string>
    <string name="of">из</string>
    <string name="unknown_error">Непредвиденная ошибка, попробуйте позже</string>
    <string name="folder_locked">Папка заблокирована, операции с ней запрещены</string>
    <string name="file_locked">Файл заблокирован, операции с ним запрещены</string>
    <string name="move_here">Переместить сюда</string>
    <string name="to_cancel">Отменить</string>
    <string name="log_in">Войти</string>
    <string name="moved_successfully">Успешно перемещено!</string>
    <string name="removed_successfully">Успешно удалено</string>
    <string name="cannot_delete_some_files_or_folders">Некоторые файлы или папки нельзя удплить!</string>
    <string name="cannot_move_some_files_or_folders">Некоторые файлы или папки не могут быть перемещены!</string>
    <string name="not_deleted">Удалить не удалось</string>
    <string name="not_all_files_or_folders_were_deleted">Не все файлы/папки были удалены</string>
    <string name="move_error">Не удалось переместить</string>
    <string name="not_all_files_or_folders_were_moved_due_to_conflicts">Не все файды/папки были перемещены из-за конфликтов</string>
    <string name="create_date">Дате добавления</string>
    <string name="edit_time">Дате изменения</string>
    <string name="first_letter">Первой букве</string>
    <string name="one_folder">папка</string>
    <string name="folder">папку</string>
    <string name="file">файл</string>
    <string name="new_name">Новое имя</string>
    <string name="folder_successfully_renamed">Папка успешно переименована</string>
    <string name="file_successfully_renamed">Файл успешно переименован</string>
    <string name="not_all_required_fields_are_filled">Не все необходимые поля заполнены!</string>
    <string name="error_not_all_images_were_sent">Ошибка, не все медиа файлы удалось отправить!</string>
    <string name="add_media">Прикрепите медиа</string>
    <string name="add_photo">Прикрепите фото</string>
    <string name="add_video">Прикрепите видео</string>
    <string name="add_audio">Прикрепите аудио</string>
    <string name="add_file">Прикрепите файл</string>
    <string name="clear">Очистить</string>
    <string name="select">Выбрать</string>
    <string name="hold">Отложить</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="tasks_are_temporary_unavailable">Задачи временно недоступны</string>
    <string name="organizations">Организации</string>
    <string name="permanent">Постоянные</string>
    <string name="close">Закрыть</string>
    <string name="save_as_pdf">Сохранить pdf</string>
    <string name="save">Сохранить</string>
    <string name="delayed">Отложено</string>
    <string name="no_data">Нет данных</string>
    <string name="skip">Пропустить</string>
    <string name="hi_">Привет!</string>
    <string name="thanks_for_download">Спасибо, что скачали меня.</string>
    <string name="swipe_to_continue">Смахни экран, чтобы узнать больше</string>
    <string name="onboarding_2_title">Ты можешь исполнять\nзадачи. Для этого они\nдолжны быть назначены\nтебе на платформе.</string>
    <string name="onboarding_2_subtitle">Просто зайди в раздел <b>Задачи</b>.\nВыбери нужную задачу:</string>
    <string name="onboarding_2_main_part">Двигай слайдеры.\nОтмечай чек-боксы.\nЗаполняй текстовые поля.\nВыбирай варианты ответов.\nПрикрепляй фото, видео и любые файлы.</string>
    <string name="onboarding_2_finish">В конце ты можешь <b>Отложить</b> задачу\nна потом и <b>Завершить</b> её.</string>
    <string name="onboarding_3_title">Знакомиться с рабочими\nдокументами можно в\nразделе Документы. Для\nэтого тебе должны быть\nданы права на платформе</string>
    <string name="onboarding_3_main_part">Просто зайди в раздел <b>Документы.</b>\nВыбери нужный и читай, смотри,\nслушай.\n\nТы можешь создать <b>Новые папки.</b>\n<b>Перемещать</b> документы по своему\nусмотрению. <b>Переименовывать</b> их\nили <b>Удалять.</b></string>
    <string name="onboarding_4_title">В разделе Аналитика ты\nможешь следить за\nдинамкой и показателями\nпо назначенным тебе\nДашбордам.</string>
    <string name="onboarding_4_main_part">Просто зайди в раздел <b>Аналитика.</b>\nВыбери нужный  <b>Дашборд.</b>.\n\nПросматривай <b>Графики.</b>\nПереходи по <b>Страницам.</b></string>
    <string name="ready_to_start">Теперь можно начинать!</string>
    <string name="about_app">О приложении</string>
    <string name="ref_about_app">Справка о приложении</string>
    <string name="analystics">Результаты</string>
    <string name="page_short">Стр</string>
    <string name="change_seq">Изменить расположение</string>
    <string name="plan">План</string>
    <string name="fact">Факт</string>
    <string name="continue_exec">Продолжить выполнение</string>
    <string name="delete_draft">Удалить черновик</string>
    <string name="no_task_error">Такой задачи не существует</string>
    <string name="balls">баллов</string>
    <string name="folder_pl">папки(ок)</string>
    <string name="file_pl">файла(ов)</string>
    <string name="try_later">Попробуйте позже</string>
    <string name="error_during_load">Во время загрузки произошла ошибка</string>
    <string name="no_app_to_open">Нет приложения, которое может открыть этот файл</string>
    <string name="something_wrong">что-то пошло не так</string>
    <string name="to_add_photo">Добавить фото</string>
    <string name="select_photo_source">Выберите откуда добавить фото</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="render_error">Ошибка при рендеринге -</string>
    <string name="invalid_template">Некорректный шаблон</string>
    <string name="no_text">Нет текста</string>
    <string name="no_title">Нет заголовка</string>
    <string name="no_camera">У вас нет камеры</string>
    <string name="no_audio_recorder_app">У вас нет приложения для записи аудио</string>
    <string name="to_select_file">Выбрать файл</string>
    <string name="no_file_manager">У вас нет файлового менеджера, чтобы выбрать файл</string>
    <string name="no_text_">Нет текста:(</string>
    <string name="error_adding_file">Ошибка при добавлении файла:</string>
    <string name="record">Запись</string>
    <string name="no_audio_app">Нет установленного аудиоплеера</string>
    <string name="error_adding_audio">Ошибка при добавлении аудио:</string>
    <string name="no_videoplayer">Нет установленного видиоплеера</string>
    <string name="error_adding_video">Ошибка при добавлении видео:</string>
    <string name="accept_account">Подтвердите аккаунт</string>
    <string name="input_pass">Введите пароль</string>
    <string name="pass">Пароль</string>
    <string name="done">Готово</string>
    <string name="cancel_">Отмена</string>
    <string name="send_error">Сбой при отправке</string>
    <string name="send_exc">Эксепшн при отправке</string>
    <string name="error_processing_photo">При обработке фото произошла ошибка::</string>
    <string name="saved_to_gallery">Сохранено в загрузках</string>
    <string name="notifications">Уведомления</string>
    <string name="date_asc">По дате (сначала старые)</string>
    <string name="date_desc">По дате (сначала новые)</string>
    <string name="name_asc">По имени</string>
    <string name="name_desc">По имени (с конца)</string>
    <string name="executor">Выполнил</string>
    <string name="finish_time">Время завершения</string>
    <string name="unknown">неизвестно</string>
    <string name="not_done_in_time">Не выполнена в срок</string>
    <string name="attention">Внимание</string>
    <string name="need_download_app">Для корректной работы, необходимо стороннее приложение, для сканирования штрик кода. Перейти в Google Play для его загрузки?</string>
    <string name="result">Результат</string>
    <string name="points">баллы</string>
    <string name="percent">проценты</string>
    <string name="scan">сканировать</string>
    <string name="open_pdf">Открыть PDF</string>
    <string name="open_docs">Открыть DOCX</string>
    <string name="log_in_to_execute_task">Войдите в систему для выполнения задачи</string>
    <string name="edit">Редактировать</string>
    <string name="profile">Профиль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="select_executors">Выбрать исполнителей</string>
    <string name="pick_executors">Укажите исполнителей</string>
    <string name="assignments">Назначения</string>
    <string name="input_task_name">Впишите название задачи</string>
    <string name="task_type_constant">Постоянная</string>
    <string name="task_type_periodical">Периодическая</string>
    <string name="from">От</string>
    <string name="to">до</string>
    <string name="user">Пользователь</string>
    <string name="add_email">Добавить email</string>
    <string name="input_message_text">Впишите текст сообщения</string>
    <string name="Day">ДЕНЬ</string>
    <string name="Week">НЕДЕЛЯ</string>
    <string name="month">МЕСЯЦ</string>
    <string name="year">ГОД</string>
    <string name="dialog_attach_file_title">Укажите тип файла\nдля присоединения</string>
    <string name="dialog_attach_file_menu_camera">Камера</string>
    <string name="dialog_attach_file_menu_gallery">Галерея</string>
    <string name="dialog_attach_file_menu_docs">Документы</string>
    <string name="dialog_attach_file_menu_audio">Аудио</string>
    <string name="dialog_attach_file_menu_close">Закрыть</string>
    <string name="menu_task_status_title">Укажите статус!</string>
    <string name="menu_task_status_transfer">Передать другому исполнителю</string>
    <string name="menu_task_status_ready">Все готово</string>
    <string name="menu_task_status_do_cant">Не могу сделать</string>
    <string name="menu_task_status_do_but_not_all">Сделал, но не все</string>
    <string name="menu_task_status_do_basic_only">Сделал только главное</string>
</resources>