<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.TextView.TaskStatus.Title"
        android:text="@string/menu_task_status_title" />

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/layout_task_status_menu_transfer"
            style="@style/AppTheme.TextView.TaskStatus"
            android:text="@string/menu_task_status_transfer" />

        <TextView
            android:id="@+id/layout_task_status_menu_do_cant"
            style="@style/AppTheme.TextView.TaskStatus"
            android:text="@string/menu_task_status_do_cant" />

        <TextView
            android:id="@+id/layout_task_status_menu_ready"
            style="@style/AppTheme.TextView.TaskStatus"
            android:text="@string/menu_task_status_ready" />

        <TextView
            android:id="@+id/layout_task_status_menu_do_but_not_all"
            style="@style/AppTheme.TextView.TaskStatus"
            android:text="@string/menu_task_status_do_but_not_all" />

        <TextView
            android:id="@+id/layout_task_status_menu_do_basic_only"
            style="@style/AppTheme.TextView.TaskStatus"
            android:text="@string/menu_task_status_do_basic_only" />

    </LinearLayout>

</LinearLayout>