<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding_page_1" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_notification" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/hi_"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="15dp"
        android:text="@string/thanks_for_download"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:gravity="center_horizontal"
        android:text="@string/swipe_to_continue"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15.2sp" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:padding="8dp"
        android:text="@string/skip"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</RelativeLayout>