<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding_page_4" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_4_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18.7sp" />

    <TextView
        android:id="@+id/main_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="20dp"
        android:text="@string/onboarding_4_main_part"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:padding="8dp"
        android:text="@string/ready_to_start"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>