<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/lightBlue"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/select_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:gravity="center"

        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <RadioButton
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.1"
            android:background="@drawable/graph_switch_button_background"
            android:button="@null"
            android:gravity="center"

            android:text="@string/Day"
            android:textColor="@color/toggle_button_text_color" />

        <RadioButton
            android:id="@+id/week"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"

            android:background="@drawable/graph_switch_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/Week"
            android:textColor="@color/toggle_button_text_color" />
        <RadioButton
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/graph_switch_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/toggle_button_text_color" />

        <RadioButton
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/graph_switch_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/toggle_button_text_color" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/graph_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue" />
</LinearLayout>