<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="17dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spTaskControlType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:minHeight="36dp"
        tools:background="@drawable/input_text_background_gray_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="#726583"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spFrom"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:minHeight="36dp"
            tools:background="@drawable/input_text_background_gray_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/to"
            android:textColor="#726583"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spTo"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:minHeight="36dp"
            tools:background="@drawable/input_text_background_gray_border" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spRangeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:minHeight="36dp"
            tools:background="@drawable/input_text_background_gray_border" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btAddUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="4dp"
            android:text="@string/user"
            android:textColor="#726583"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vAddedUsersBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/btAddEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="4dp"
            android:text="@string/add_email"
            android:textColor="#726583"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vAddedEmailsBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <EditText
        android:id="@+id/etNotifyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_input_task_rule_message"
        android:hint="@string/input_message_text"
        android:padding="10dp"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#726583" />
</LinearLayout>