<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/folders_block"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#95699e"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:text="@string/folders"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/white_rounded_rectangle">

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/folders_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </HorizontalScrollView>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:alpha="0.7"
        android:background="@drawable/half_transparent_rounded_menu_background">

        <TextView
            android:id="@+id/move_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="19dp"
            android:gravity="center_vertical"
            android:text="@string/move_here"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="19dp"
            android:gravity="center_vertical"
            android:text="@string/to_cancel"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>